complete sekai-master-db song(music) parse
- added charset param in database import command
- moved PostgresConfig to sekai-db proj
- added dependency gson
- added data_tool/sekai_master_db with a Music which can parse sekai-master-db musics.json and convert it to the Song object